--- a/backend/package.json
+++ b/backend/package.json
@@ -11,7 +11,6 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
   "dependencies": {
     "@google-cloud/vision": "^4.3.2",
     "axios": "^1.7.7",
@@ -26,5 +25,7 @@
     "mongoose": "^8.9.5",
     "multer": "^1.4.5-lts.1",
     "openai": "^4.73.0"
-  }
+  },
+  "devDependencies": {},
+  "description": ""
 }
