--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,2 @@
-SKIP_PREFLIGHT_CHECK=true
-GOOGLE_APPLICATION_CREDENTIALS="C:/Users/Hariharan/Downloads/rare-hull-445213-c2-6637d091a661.json"
+SKIP_PREFLIGHT_CHECK=
+GOOGLE_APPLICATION_CREDENTIALS=
